# lotus-root-chef

./: LICENSE  README.md  bun.lockb  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: invokers.rs  manage.rs  mod.rs
src-tauri/src/board/: book.rs  filter.rs  mod.rs
src-tauri/src/funcs/: client.rs  mod.rs  position.rs  task.rs  utils.rs
src/components/: crud-controller.tsx  gui-controller.tsx  history.tsx  i18n.tsx  logger.tsx  models.tsx
