[package]
name = "lotus-root-chef"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lotus_root_chef_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.39", features = ["serde"] }
ordered-float = "4.6.0"
tokio = "1.43.0"
env_logger = "0.11.6"
log = "0.4.25"
futures-util = "0.3.31"
crypto-botters = { version = "0.6.0", features = ["bybit"] }
tokio-util = "0.7.13"
dotenv = "0.15.0"
rand = "0.9.0"
